Update build data and stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,11 @@
+# Done to increase the memory available to gradle.
+# Ensure encoding is consistent across systems.
+org.gradle.jvmargs=-Xmx1G -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+
 groupid=ch.njol
 name=skript
-version=2.6.5-for-1.8
-jarName=Skript.jar
-testEnv=java17/paper-1.19
-testEnvJavaVersion=17
+version=2.9.1-for-1.8
+jarName=Skript-1.8.jar
+testEnv=java21/paper-1.21.0
+testEnvJavaVersion=21
