--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,47 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 import org.apache.tools.ant.filters.ReplaceTokens
 
 import java.time.LocalTime
 
 plugins {
-	id 'com.github.johnrengelman.shadow' version '7.1.2'
-	id 'com.github.hierynomus.license' version '0.16.1'
+	id 'com.github.johnrengelman.shadow' version '8.1.1'
 	id 'maven-publish'
 	id 'java'
 }
 
-tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += ["-source", "1.8", "-target", "1.8"]
+configurations {
+    testImplementation.extendsFrom testShadow
 }
 
 allprojects {
 	repositories {
 		mavenCentral()
-		maven { url 'https://jitpack.io' }
 		maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
 		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-		maven { url 'https://papermc.io/repo/repository/maven-public/' }
+		maven { url 'https://repo.papermc.io/repository/maven-public/' }
+		maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/' } // needed for paper adventure snapshot
 		maven { url 'https://ci.emc.gs/nexus/content/groups/aikar/' }
 	}
 }
 
 dependencies {
-	shadow group: 'org.bstats', name: 'bstats-bukkit', version: '3.0.0'
-	implementation group: 'io.papermc.paper', name: 'paper-api', version: '1.19.2-R0.1-SNAPSHOT'
-	implementation group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '2.2.600'
+	shadow group: 'io.papermc', name: 'paperlib', version: '1.0.8'
+	shadow group: 'org.bstats', name: 'bstats-bukkit', version: '3.0.2'
+	shadow group: 'net.kyori', name: 'adventure-text-serializer-bungeecord', version: '4.3.2'
+
+	implementation group: 'io.papermc.paper', name: 'paper-api', version: '1.21-R0.1-SNAPSHOT'
+	implementation group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '2.2.700'
 	implementation group: 'com.google.code.findbugs', name: 'findbugs', version: '3.0.1'
 	implementation group: 'com.sk89q.worldguard', name: 'worldguard-legacy', version: '7.0.0-SNAPSHOT'
-	implementation group: 'net.milkbowl.vault', name: 'Vault', version: '1.7.1', {
+	implementation group: 'net.milkbowl.vault', name: 'Vault', version: '1.7.3', {
 		exclude group: 'org.bstats', module: 'bstats-bukkit'
 	}
-	implementation fileTree(dir: 'lib', include: '*.jar')
-}
 
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
+	implementation fileTree(dir: 'lib', include: '*.jar')
+
+	testShadow group: 'junit', name: 'junit', version: '4.13.2'
+	testShadow group: 'org.easymock', name: 'easymock', version: '5.0.1'
+}
 
 task checkAliases {
 	description 'Checks for the existence of the aliases.'
@@ -51,35 +53,45 @@ task checkAliases {
 	}
 }
 
+task testJar(type: ShadowJar) {
+	dependsOn(compileTestJava)
+	archiveFileName = 'Skript-JUnit.jar'
+	from sourceSets.test.output, sourceSets.main.output, project.configurations.testShadow
+}
+
 task jar(overwrite: true, type: ShadowJar) {
 	dependsOn checkAliases
-	archiveName jarName ? 'Skript.jar' : jarName
+	archiveFileName = jarName ? 'Skript-' + project.version + '.jar' : jarName
 	from sourceSets.main.output
 }
 
 task build(overwrite: true, type: ShadowJar) {
-	archiveName jarName ? 'Skript.jar' : jarName
+	archiveFileName = jarName ? 'Skript-' + project.version + '.jar' : jarName
 	from sourceSets.main.output
 }
 
-task relocateShadowJar(type: ConfigureShadowRelocation) {
-	target = tasks.shadowJar
+// Excludes the tests for the build task. Should be using junit, junitJava17, junitJava11, skriptTest, quickTest.
+// We do not want tests to run for building. That's time consuming and annoying. Especially in development.
+test {
+	exclude '**/*'
 }
 
 task sourceJar(type: Jar) {
 	from sourceSets.main.allJava
-	archiveClassifier = "sources"
+	archiveClassifier = 'sources'
 }
 
 tasks.withType(ShadowJar) {
-	dependsOn relocateShadowJar
 	configurations = [
 		project.configurations.shadow
 	]
 	dependencies {
+		include(dependency('io.papermc:paperlib'))
 		include(dependency('org.bstats:bstats-bukkit'))
 		include(dependency('org.bstats:bstats-base'))
+		include(dependency('net.kyori:adventure-text-serializer-bungeecord'))
 	}
+	relocate 'io.papermc.lib', 'ch.njol.skript.paperlib'
 	relocate 'org.bstats', 'ch.njol.skript.bstats'
 	manifest {
 		attributes(
@@ -91,7 +103,6 @@ tasks.withType(ShadowJar) {
 	from 'skript-aliases', {
 		into 'aliases-english' // Change this if we get aliases in other languages
 	}
-	from 'skript-worldguard6/build/classes/java/main'
 }
 
 processResources {
@@ -109,31 +120,33 @@ processResources {
 publishing {
 	publications {
 		maven(MavenPublication) {
-			groupId "com.github.SkriptLang"
-			artifactId "Skript"
+			groupId 'com.github.SkriptLang'
+			artifactId 'Skript'
 			version project.version
 			artifact sourceJar
 			artifact tasks.jar
 		}
 	}
-}
 
-license {
-	header file('licenseheader.txt')
-	exclude('**/Metrics.java') // Not under GPLv3
-	exclude('**/BurgerHelper.java') // Not exclusively GPLv3
-	exclude('**/*.sk') // Sample scripts and maybe aliases
-	exclude('**/*.lang') // Language files do not have headers (still under GPLv3)
-	exclude('**/*.json') // JSON files do not have headers
+	repositories {
+		maven {
+			name = 'repo'
+			url = 'https://repo.skriptlang.org/releases'
+			credentials {
+				username = System.getenv('MAVEN_USERNAME')
+				password = System.getenv('MAVEN_PASSWORD')
+			}
+		}
+	}
 }
 
 // Task to check that test scripts are named correctly
-tasks.create('testNaming') {
+tasks.register('testNaming') {
 	doLast {
 		// Regression tests
 		for (def file : project.file('src/test/skript/tests/regressions').listFiles()) {
 			def name = file.getName()
-			if (name.toLowerCase() != name) {
+			if (name.toLowerCase(Locale.ENGLISH) != name) {
 				throw new InvalidUserDataException('invalid test name: ' + name)
 			}
 		}
@@ -150,41 +163,123 @@ tasks.create('testNaming') {
 	}
 }
 
-// Create a test task with given name, environments dir/file and is it development mode task
-void createTestTask(String name, String environments, boolean devMode) {
-	tasks.create(name) {
-		// Compile Skript and check test naming
-		dependsOn jar, testNaming
+enum Modifiers {
+	DEV_MODE, GEN_NIGHTLY_DOCS, GEN_RELEASE_DOCS, DEBUG, PROFILE, JUNIT
+}
+
+// Create a test task with given name, environments dir/file, dev mode and java version.
+// -1 on the timeout means it'll be disabled.
+void createTestTask(String name, String desc, String environments, int javaVersion, long timeout, Modifiers... modifiers) {
+	if (timeout == 0)
+		timeout = 300000 // 5 minutes
+	boolean junit = modifiers.contains(Modifiers.JUNIT)
+	boolean releaseDocs = modifiers.contains(Modifiers.GEN_RELEASE_DOCS)
+	boolean docs = modifiers.contains(Modifiers.GEN_NIGHTLY_DOCS) || releaseDocs
+	def artifact = 'build' + File.separator + 'libs' + File.separator
+	if (junit) {
+		artifact += 'Skript-JUnit.jar'
+	} else if (releaseDocs) {
+		artifact += 'Skript-' + version + '.jar'
+	} else {
+		artifact += 'Skript-nightly.jar'
+	}
+	tasks.register(name, JavaExec) {
+		description = desc
+		if (junit) {
+			dependsOn testJar
+		} else if (releaseDocs) {
+			dependsOn githubRelease, testNaming
+		} else {
+			dependsOn nightlyRelease, testNaming
+		}
+		javaLauncher = javaToolchains.launcherFor {
+	        languageVersion = JavaLanguageVersion.of(javaVersion)
+	    }
+		if (modifiers.contains(Modifiers.DEV_MODE)) {
+			standardInput = System.in
+		}
+		group = 'execution'
+		classpath = files([
+			artifact,
+			project.configurations.runtimeClasspath.find { it.name.startsWith('gson') },
+			sourceSets.main.runtimeClasspath
+		])
+		main = 'ch.njol.skript.test.platform.PlatformMain'
+		args = [
+			'build/test_runners',
+			junit ? 'src/test/skript/junit' : 'src/test/skript/tests',
+			'src/test/resources/runner_data',
+			environments,
+			modifiers.contains(Modifiers.DEV_MODE),
+			docs,
+			junit,
+			modifiers.contains(Modifiers.DEBUG),
+			project.findProperty('verbosity') ?: "null",
+			timeout
+		]
+
+		// Do first is used when throwing exceptions.
+		// This way it's not called when defining the task.
 		doFirst {
-			if (devMode) {
-				standardInput = System.in
-			}
-			javaexec {
-				group = 'execution'
-				classpath = files([
-					'build' + File.separator + 'libs' + File.separator + 'Skript.jar',
-					project.configurations.runtimeClasspath.find { it.name.startsWith('gson') },
-					sourceSets.main.runtimeClasspath
-				])
-				main = 'ch.njol.skript.tests.platform.PlatformMain'
-				args = [
-					'test_runners',
-					'src/test/skript/tests',
-					'src/test/resources/runner_data',
-					environments,
-					devMode
-				]
+			if (!gradle.taskGraph.hasTask(":tasks") && !gradle.startParameter.dryRun && modifiers.contains(Modifiers.PROFILE)) {
+				if (!project.hasProperty('profiler'))
+					throw new MissingPropertyException('Add parameter -Pprofiler=<path to profiler>', 'profiler', String.class)
+
+				args += '-agentpath:' + project.property('profiler') + '=port=8849,nowait'
 			}
 		}
 	}
 }
 
+def java21 = 21
+def java17 = 17
+def java11 = 11
+
+def latestEnv = 'java21/paper-1.21.0.json'
+def latestJava = java21
+def oldestJava = java11
+
+def latestJUnitEnv = 'java17/paper-1.20.4.json'
+def latestJUnitJava = java17
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(latestJava))
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += ['-source', '' + oldestJava, '-target', '' + oldestJava]
+}
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 // Register different Skript testing tasks
-createTestTask('quickTest', 'src/test/skript/environments/main/paper-1.17.1.json', false)
-createTestTask('skriptTest', 'src/test/skript/environments/main', false)
-createTestTask('skriptTestFull', 'src/test/skript/environments/', false)
-createTestTask('skriptTestDev', 'src/test/skript/environments/main/' + (project.property('testEnv') == null
-	? 'paper-1.17.json' : project.property('testEnv') + '.json'), true)
+String environments = 'src/test/skript/environments/';
+String env = project.property('testEnv') == null ? latestEnv : project.property('testEnv') + '.json'
+int envJava = project.property('testEnvJavaVersion') == null ? latestJava : Integer.parseInt(project.property('testEnvJavaVersion') as String)
+createTestTask('quickTest', 'Runs tests on one environment being the latest supported Java and Minecraft.', environments + latestEnv, latestJava, 0)
+createTestTask('skriptTestJava21', 'Runs tests on all Java 21 environments.', environments + 'java21', java21, 0)
+createTestTask('skriptTestJava17', 'Runs tests on all Java 17 environments.', environments + 'java17', java17, 0)
+createTestTask('skriptTestJava11', 'Runs tests on all Java 11 environments.', environments + 'java11', java11, 0)
+createTestTask('skriptTestDev', 'Runs testing server and uses \'system.in\' for command input, stop server to finish.', environments + env, envJava, 0, Modifiers.DEV_MODE, Modifiers.DEBUG)
+createTestTask('skriptProfile', 'Starts the testing server with JProfiler support.', environments + latestEnv, latestJava, -1, Modifiers.PROFILE)
+createTestTask('genNightlyDocs', 'Generates the Skript documentation website html files.', environments + env, envJava, 0, Modifiers.GEN_NIGHTLY_DOCS)
+createTestTask('genReleaseDocs', 'Generates the Skript documentation website html files for a release.', environments + env, envJava, 0, Modifiers.GEN_RELEASE_DOCS)
+tasks.register('skriptTest') {
+	description = 'Runs tests on all environments.'
+	dependsOn skriptTestJava11, skriptTestJava17, skriptTestJava21
+}
+
+createTestTask('JUnitQuick', 'Runs JUnit tests on one environment being the latest supported Java and Minecraft.', environments + latestJUnitEnv, latestJUnitJava, 0, Modifiers.JUNIT)
+// Disabled as EasyMock 5.2.0 is required for Java 21 support
+// However, we are currently using 5.0.1 (see https://github.com/SkriptLang/Skript/pull/6204#discussion_r1405302009)
+//createTestTask('JUnitJava21', 'Runs JUnit tests on all Java 21 environments.', environments + 'java21', java21, 0, Modifiers.JUNIT)
+createTestTask('JUnitJava17', 'Runs JUnit tests on all Java 17 environments.', environments + 'java17', java17, 0, Modifiers.JUNIT)
+createTestTask('JUnitJava11', 'Runs JUnit tests on all Java 11 environments.', environments + 'java11', java11, 0, Modifiers.JUNIT)
+tasks.register('JUnit') {
+	description = 'Runs JUnit tests on all environments.'
+	dependsOn JUnitJava11, JUnitJava17//, JUnitJava21
+}
 
 // Build flavor configurations
 task githubResources(type: ProcessResources) {
@@ -192,10 +287,8 @@ task githubResources(type: ProcessResources) {
 		include '**'
 		version = project.property('version')
 		def channel = 'stable'
-		if (version.contains('alpha'))
-			channel = 'alpha'
-		else if (version.contains('beta'))
-			channel = 'beta'
+		if (version.contains('-'))
+			channel = 'prerelease'
 		filter ReplaceTokens, tokens: [
 			'version'         : version,
 			'today'           : '' + LocalTime.now(),
@@ -212,7 +305,7 @@ task githubResources(type: ProcessResources) {
 task githubRelease(type: ShadowJar) {
 	from sourceSets.main.output
 	dependsOn githubResources
-	archiveName = 'Skript-github.jar'
+	archiveFileName = 'Skript-' + version +'.jar'
 	manifest {
 		attributes(
 			'Name': 'ch/njol/skript',
@@ -220,7 +313,6 @@ task githubRelease(type: ShadowJar) {
 			'Sealed': 'true'
 		)
 	}
-	from 'skript-worldguard6/build/classes/java/main'
 }
 
 task spigotResources(type: ProcessResources) {
@@ -228,10 +320,8 @@ task spigotResources(type: ProcessResources) {
 		include '**'
 		version = project.property('version')
 		def channel = 'stable'
-		if (version.contains('alpha'))
-			channel = 'alpha'
-		else if (version.contains('beta'))
-			channel = 'beta'
+		if (version.contains('-'))
+			channel = 'prerelease'
 		filter ReplaceTokens, tokens: [
 			'version'         : version,
 			'today'           : '' + LocalTime.now(),
@@ -248,7 +338,7 @@ task spigotResources(type: ProcessResources) {
 task spigotRelease(type: ShadowJar) {
 	from sourceSets.main.output
 	dependsOn spigotResources
-	archiveName = 'Skript-spigot.jar'
+	archiveFileName = 'Skript-spigot.jar'
 	manifest {
 		attributes(
 			'Name': 'ch/njol/skript',
@@ -256,7 +346,6 @@ task spigotRelease(type: ShadowJar) {
 			'Sealed': 'true'
 		)
 	}
-	from 'skript-worldguard6/build/classes/java/main'
 }
 
 task nightlyResources(type: ProcessResources) {
@@ -268,8 +357,8 @@ task nightlyResources(type: ProcessResources) {
 			'version'         : version,
 			'today'           : '' + LocalTime.now(),
 			'release-flavor'  : 'nightly-matocolotoe-1.8', // Skript-1.8 build, automatically done by CI
-			'release-channel' : 'alpha', // No update checking, but these are VERY unstable
-			'release-updater' : 'ch.njol.skript.update.NoUpdateChecker', // No autoupdates for now
+			'release-channel' : 'prerelease', // No update checking, but these are VERY unstable
+			'release-updater' : 'ch.njol.skript.update.NoUpdateChecker', // No auto updates for now
 			'release-source'  : '',
 			'release-download': 'null'
 		]
@@ -279,8 +368,8 @@ task nightlyResources(type: ProcessResources) {
 
 task nightlyRelease(type: ShadowJar) {
 	from sourceSets.main.output
-	dependsOn nightlyResources, licenseMain
-	archiveName = 'Skript-nightly.jar'
+	dependsOn nightlyResources
+	archiveFileName = 'Skript-nightly.jar'
 	manifest {
 		attributes(
 			'Name': 'ch/njol/skript',
@@ -288,5 +377,26 @@ task nightlyRelease(type: ShadowJar) {
 			'Sealed': 'true'
 		)
 	}
-	from 'skript-worldguard6/build/classes/java/main'
+}
+
+javadoc {
+	mustRunAfter(tasks.withType(ProcessResources))
+	title = 'Skript ' + project.property('version')
+	source = sourceSets.main.allJava
+
+	exclude("ch/njol/skript/conditions/**")
+	exclude("ch/njol/skript/expressions/**")
+	exclude("ch/njol/skript/effects/**")
+	exclude("ch/njol/skript/events/**")
+	exclude("ch/njol/skript/sections/**")
+	exclude("ch/njol/skript/structures/**")
+	exclude("ch/njol/skript/lang/function/EffFunctionCall.java")
+	exclude("ch/njol/skript/lang/function/ExprFunctionCall.java")
+	exclude("ch/njol/skript/hooks/**")
+	exclude("ch/njol/skript/test/**")
+
+	classpath = configurations.compileClasspath + sourceSets.main.output
+	options.encoding = 'UTF-8'
+	// currently our javadoc has a lot of errors, so we need to suppress the linter
+	options.addStringOption('Xdoclint:none', '-quiet')
 }
