--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += ["-source", "1.8", "-target", "1.8"]
+	options.compilerArgs += ["-source", "17", "-target", "17"]
 }
 
 allprojects {
@@ -35,6 +35,11 @@ dependencies {
 	implementation group: 'net.milkbowl.vault', name: 'Vault', version: '1.7.1', {
 		exclude group: 'org.bstats', module: 'bstats-bukkit'
 	}
+
+	// Libraries that are installed at runtime. See plugin.yml 'libraries' section.
+	implementation group: 'com.h2database', name: 'h2', version: project.property('h2.version')
+	implementation group: 'com.zaxxer', name: 'HikariCP', version: project.property('hikaricp.version')
+
 	implementation fileTree(dir: 'lib', include: '*.jar')
 }
 
@@ -186,6 +191,15 @@ createTestTask('skriptTestFull', 'src/test/skript/environments/', false)
 createTestTask('skriptTestDev', 'src/test/skript/environments/main/' + (project.property('testEnv') == null
 	? 'paper-1.17.json' : project.property('testEnv') + '.json'), true)
 
+// Generic replace tokens, e.g: '@version@'
+tasks.withType(Copy).configureEach {
+	filter(ReplaceTokens, tokens: [
+		'today'            : '' + LocalTime.now(),
+		'h2.version'       : project.property('h2.version'),
+		'hikaricp.version' : project.property('hikaricp.version')
+	])
+}
+
 // Build flavor configurations
 task githubResources(type: ProcessResources) {
 	from 'src/main/resources', {
@@ -198,7 +212,6 @@ task githubResources(type: ProcessResources) {
 			channel = 'beta'
 		filter ReplaceTokens, tokens: [
 			'version'         : version,
-			'today'           : '' + LocalTime.now(),
 			'release-flavor'  : 'github-matocolotoe-1.8', // Skript-1.8 build, distributed on Github
 			'release-channel' : channel, // Release channel, see above
 			'release-updater' : 'ch.njol.skript.update.GithubChecker', // Github API client
@@ -234,7 +247,6 @@ task spigotResources(type: ProcessResources) {
 			channel = 'beta'
 		filter ReplaceTokens, tokens: [
 			'version'         : version,
-			'today'           : '' + LocalTime.now(),
 			'release-flavor'  : 'spigot-matocolotoe-1.8', // Skript-1.8 build, distributed on Spigot resources
 			'release-channel' : channel, // Release channel, see above
 			'release-updater' : 'ch.njol.skript.update.GithubChecker', // Github API client
@@ -266,7 +278,6 @@ task nightlyResources(type: ProcessResources) {
 		version = project.property('version') + '-nightly-' + hash
 		filter ReplaceTokens, tokens: [
 			'version'         : version,
-			'today'           : '' + LocalTime.now(),
 			'release-flavor'  : 'nightly-matocolotoe-1.8', // Skript-1.8 build, automatically done by CI
 			'release-channel' : 'alpha', // No update checking, but these are VERY unstable
 			'release-updater' : 'ch.njol.skript.update.NoUpdateChecker', // No autoupdates for now
