--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ version=2.6.5-for-1.8
 jarName=Skript.jar
 testEnv=java17/paper-1.19
 testEnvJavaVersion=17
+
+hikaricp.version=5.1.0
+h2.version=2.3.232
