--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ allprojects {
 
 dependencies {
 	shadow group: 'org.bstats', name: 'bstats-bukkit', version: '3.0.0'
+	shadow group: 'com.h2database', name: 'h2', version: '2.3.232'
+	shadow group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
 	implementation group: 'io.papermc.paper', name: 'paper-api', version: '1.19.2-R0.1-SNAPSHOT'
 	implementation group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '2.2.600'
 	implementation group: 'com.google.code.findbugs', name: 'findbugs', version: '3.0.1'
@@ -35,10 +37,6 @@ dependencies {
 	implementation group: 'net.milkbowl.vault', name: 'Vault', version: '1.7.1', {
 		exclude group: 'org.bstats', module: 'bstats-bukkit'
 	}
-
-	// Libraries that are installed at runtime. See plugin.yml 'libraries' section.
-	shadow group: 'com.h2database', name: 'h2', version: project.property('h2.version')
-	shadow group: 'com.zaxxer', name: 'HikariCP', version: project.property('hikaricp.version')
 
 	implementation fileTree(dir: 'lib', include: '*.jar')
 }
