--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ allprojects {
 
 dependencies {
 	shadow group: 'org.bstats', name: 'bstats-bukkit', version: '3.0.0'
-	shadow group: 'com.h2database', name: 'h2', version: '2.3.232'
-	shadow group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
+	shadow group: 'com.h2database', name: 'h2', version: project.property('h2.version')
+	shadow group: 'com.zaxxer', name: 'HikariCP', version: project.property('hikaricp.version')
 	implementation group: 'io.papermc.paper', name: 'paper-api', version: '1.19.2-R0.1-SNAPSHOT'
 	implementation group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '2.2.600'
 	implementation group: 'com.google.code.findbugs', name: 'findbugs', version: '3.0.1'
@@ -82,8 +82,6 @@ tasks.withType(ShadowJar) {
 	dependencies {
 		include(dependency('org.bstats:bstats-bukkit'))
 		include(dependency('org.bstats:bstats-base'))
-        include(dependency('com.zaxxer:HikariCP'))
-        include(dependency('com.h2database:h2'))
 	}
 	relocate 'org.bstats', 'ch.njol.skript.bstats'
 	manifest {
