--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,10 @@ jarName=Skript.jar
 testEnv=java17/paper-1.19
 testEnvJavaVersion=17
 
-#h2.version=2.3.232
-h2.version=2.1.214
-#hikaricp.version=5.1.0
-hikaricp.version=5.0.1
+# java21
+h2.version=2.3.232
+hikaricp.version=5.1.0
+
+# java17
+#h2.version=2.1.214
+#hikaricp.version=5.0.1
