--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,13 +9,13 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v1.4.3
       with:
-        java-version: 1.17
+        java-version: 17
     - name: Grant permissions
       run: chmod +x gradlew
-    - name: Build Skript-1.8
+    - name: Build Skript for 1.12.2
       run: ./gradlew clean build
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: Skript
-        path: build/libs/Skript.jar
+        path: build/libs/*.jar
